--- a/ML/configs/prom_config.json
+++ b/ML/configs/prom_config.json
@@ -1,8 +1,8 @@
 {
   "dataset_type": "Prometheus",
-  "dataset_path": "../../data/PROMETHEUS_merged.csv",
+  "dataset_path": "../../data/PROMETHEUS_merged_v_0.0.2.csv",
   "model_save_dir": "../saved_models",
-  "time_column": "timestamp",
+  "time_column": "Time",
   "val_size": 0.1,
   "test_size": 0.1,
   "batch_size": 16,
