--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas~=1.2.5
-matplotlib~=3.2.2
-numpy~=1.20.2
-sklearn~=0.0
-scikit-learn~=0.24.2
-prometheus_client~=0.11.0
-pyzmq~=20.0.0
-requests~=2.25.1
-pika~=1.2.0
+pandas
+matplotlib
+numpy
+sklearn
+scikit-learn
+prometheus_client
+pyzmq
+requests
+pika
