--- a/ML/configs/prom_config.json
+++ b/ML/configs/prom_config.json
@@ -1,6 +1,6 @@
 {
   "dataset_type": "Prometheus",
-  "dataset_path": "../../data/PROMETHEUS_merged_v_0.0.2.csv",
+  "dataset_path": "../../data/non_constant_300.csv",
   "model_save_dir": "../saved_models",
   "time_column": "Time",
   "val_size": 0.1,
