--- a/ML/configs/prom_config.json
+++ b/ML/configs/prom_config.json
@@ -1,7 +1,8 @@
 {
   "dataset_type": "Prometheus",
-  "dataset_path": "../../data/non_constant_6000.csv",
+  "dataset_path": "../../data/non_constant_300.csv",
   "model_save_dir": "../saved_models",
+  "plots_save_dir": "../plot/saved_plots",
   "time_column": "Time",
   "val_size": 0.1,
   "test_size": 0.1,
@@ -9,7 +10,7 @@
   "lstm_hidden_size": 64,
   "lstm_num_layers": 3,
   "lstm_dropout": 0.2,
-  "learning_rate": 0.001,
+  "learning_rate": 0.01,
   "device": "cpu",
-  "num_epochs": 40
+  "num_epochs": 5
 }
