--- a/kubernetes/helm/rabbitmq_exporter/values.yaml
+++ b/kubernetes/helm/rabbitmq_exporter/values.yaml
@@ -34,9 +34,9 @@ affinity: {}
 
 loglevel: debug
 rabbitmq:
-  url: http://10.106.138.43:15672
-  user: user
-  password: WGpsHxZFLu
+  url: ""
+  user: ""
+  password: ""
   # If existingPasswordSecret is set then password is ignored
   existingPasswordSecret: ~
   existingPasswordSecretKey: password
