--- a/kubernetes/helm/prometheus/values.yaml
+++ b/kubernetes/helm/prometheus/values.yaml
@@ -18,54 +18,74 @@ kubelet:
 
 ## Component scraping the kube controller manager
 ##
-kubeControllerManager:
-  enabled: true
-
-coreDns:
-  enabled: true
-## Component scraping kubeDns. Use either this or coreDns
-##
-kubeDns:
-  enabled: true
-
-## Component scraping etcd
-##
-kubeEtcd:
-  enabled: true
-
-## Component scraping kube scheduler
-##
-kubeScheduler:
-  enabled: true
-
-## Component scraping kube proxy
-##
-kubeProxy:
-  enabled: true
+#kubeControllerManager:
+#  enabled: true
+#
+#coreDns:
+#  enabled: true
+### Component scraping kubeDns. Use either this or coreDns
+###
+#kubeDns:
+#  enabled: true
+#
+### Component scraping etcd
+###
+#kubeEtcd:
+#  enabled: true
+#
+### Component scraping kube scheduler
+###
+#kubeScheduler:
+#  enabled: true
+#
+### Component scraping kube proxy
+###
+#kubeProxy:
+#  enabled: true
 
 ## Component scraping kube state metrics
 ##
-kubeStateMetrics:
-  enabled: true
-  nodeSelector: 
+
+## Configuration for kube-state-metrics subchart
+##
+kube-state-metrics:
+  nodeSelector:
     kubernetes.io/hostname: minikube
+
 
 ## Deploy node exporter as a daemonset to all nodes
 ##
 nodeExporter:
   enabled: false
-  serviceMonitor:
-    ## Scrape interval. If not set, the Prometheus default scrape interval is used.
-    ##
-    interval: "100ms"
 
-    ## proxyUrl: URL of a proxy that should be used for scraping.
+## Configuration for prometheus-node-exporter subchart
+##
+prometheus-node-exporter:
+  namespaceOverride: ""
+  nodeSelector:
+    kubernetes.io/hostname: minikube-m02
+  podLabels:
+    ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
     ##
-    proxyUrl: 
+    jobLabel: node-exporter
+  extraArgs:
+    - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
+    - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+  service:
+    portName: http-metrics
+  prometheus:
+    monitor:
+      enabled: true
 
-    ## How long until a scrape request times out. If not set, the Prometheus default scape timeout is used.
-    ##
-    scrapeTimeout: "100ms"
+      jobLabel: jobLabel
+
+      ## Scrape interval. If not set, the Prometheus default scrape interval is used.
+      ##
+      interval: "1s"
+
+      ## How long until a scrape request times out. If not set, the Prometheus default scape timeout is used.
+      ##
+      scrapeTimeout: "1s"
 
 
 ## Configuration for alertmanager
@@ -76,7 +96,7 @@ alertmanager:
   ## Deploy alertmanager
   ##
   enabled: false
-  nodeSelector: 
+  nodeSelector:
     kubernetes.io/hostname: minikube
 
 ## Manages Prometheus and Alertmanager components
