--- a/kubernetes/helm/workload_sim/templates/deployment.yaml
+++ b/kubernetes/helm/workload_sim/templates/deployment.yaml
@@ -15,14 +15,30 @@ spec:
       labels:
         app: workload-simulator
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: minikube-m02
       containers:
       - name: workload-simulator
-        image: babaksit/workload_simulator:v0.0.1
+        image: babaksit/workload_simulator:v0.0.3
         env:
           - name: RABBITMQ_HOST
             value: 
         args: ["--cpu-scale", "{{ .Values.cpuScale }}",
                "--memory-scale", "{{ .Values.memoryScale }}", 
-               "--rabbitmq-host", "{{ .Values.rabbitmqHost }}"]
-      nodeSelector:
-        kubernetes.io/hostname: minikube-m02
+               "--rabbitmq-host", "{{ .Values.rabbitmqHost }}",
+               "--file-path", {{ .Values.dirPath }}{{ .Values.filePath }}]
+        volumeMounts:
+          - mountPath: {{ .Values.dirPath }}
+            name: mydir
+          - mountPath: {{ .Values.dirPath }}{{ .Values.filePath }}
+            name: myfile
+      volumes:
+        - name: mydir
+          hostPath:
+            path: {{ .Values.dirPath }}
+            type: DirectoryOrCreate
+        - name: myfile
+          hostPath:
+            path: {{ .Values.dirPath }}{{ .Values.filePath }}
+            type: FileOrCreate
+
