--- a/airflow/values.yaml
+++ b/airflow/values.yaml
@@ -5,4 +5,38 @@ nodeSelector:
 postgresql:
   volumePermissions:
     enabled: true
+  nodeSelector:
+    kubernetes.io/hostname: minikube
 
+# Git sync
+dags:
+  persistence:
+    # Enable persistent volume for storing dags
+    enabled: true
+    # Volume size for dags
+    size: 1Gi
+
+  gitSync:
+    enabled: true
+
+    # git repo clone url
+    # ssh examples ssh://git@github.com/apache/airflow.git
+    # git@github.com:apache/airflow.git
+    # https example: https://github.com/apache/airflow.git
+    repo: git@github.com:babaksit/adaptive-monitoring-nn.git
+    branch: main
+    rev: HEAD
+    depth: 1
+    # the number of consecutive failures allowed before aborting
+    maxFailures: 0
+    # subpath within the repo where dags are located
+    # should be "" if dags are at repo root
+    subPath: "pipeline/dags"
+
+    sshKeySecret: airflow-ssh-git-secret
+logs:
+  persistence:
+    # Enable persistent volume for storing logs
+    enabled: true
+    # Volume size for logs
+    size: 1Gi
