--- a/kubernetes/helm/prometheus/values.yaml
+++ b/kubernetes/helm/prometheus/values.yaml
@@ -71,6 +71,9 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
     - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+#    - --collector.disable-defaults
+#    - --web.disable-exporter-metrics
+#    - --collector.cpu
   service:
     portName: http-metrics
   prometheus:
@@ -85,6 +88,10 @@ prometheus-node-exporter:
       ## How long until a scrape request times out. If not set, the Prometheus default scape timeout is used.
       ##
       scrapeTimeout: "1s"
+
+#      relabelings:
+#       - action: drop
+#         regex: "node_cpu*"
 
 
 ## Configuration for alertmanager
