--- a/kubernetes/helm/prometheus/values.yaml
+++ b/kubernetes/helm/prometheus/values.yaml
@@ -15,6 +15,8 @@ kubeApiServer:
 ##
 kubelet:
   enabled: true
+  nodeSelector:
+    kubernetes.io/hostname: minikube
 
 ## Component scraping the kube controller manager
 ##
@@ -78,7 +80,7 @@ prometheus-node-exporter:
     portName: http-metrics
   prometheus:
     monitor:
-      enabled: false
+      enabled: true
       jobLabel: jobLabel
 
       ## Scrape interval. If not set, the Prometheus default scrape interval is used.
@@ -112,7 +114,7 @@ prometheusOperator:
   nodeSelector: 
     kubernetes.io/hostname: minikube
   kubeletService:
-    enabled: true
+    enabled: false
       ## Create a servicemonitor for the operator
   ##
   serviceMonitor:
