--- a/kubernetes/helm/prometheus/values.yaml
+++ b/kubernetes/helm/prometheus/values.yaml
@@ -73,14 +73,16 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
     - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
-#    - --collector.disable-defaults
-#    - --web.disable-exporter-metrics
-#    - --collector.cpu
+    - --collector.disable-defaults
+    - --web.disable-exporter-metrics
+    - --collector.cpu
+    - --collector.meminfo
+    - --collector.diskstats
   service:
     portName: http-metrics
   prometheus:
     monitor:
-      enabled: true
+      enabled: false
       jobLabel: jobLabel
 
       ## Scrape interval. If not set, the Prometheus default scrape interval is used.
