--- a/kubernetes/helm/prometheus/values.yaml
+++ b/kubernetes/helm/prometheus/values.yaml
@@ -82,7 +82,7 @@ prometheus-node-exporter:
     portName: http-metrics
   prometheus:
     monitor:
-      enabled: false
+      enabled: true
       jobLabel: jobLabel
 
       ## Scrape interval. If not set, the Prometheus default scrape interval is used.
